@@ -3,6 +3,7 @@
   BF: HTTP(S) CGI: REQUEST_URI without normalization/decoding (unchanged as received from the client)
   CR: HTTP(S) CGI: Output of the error pipe of the CGI process
   CR: HTTP(S) CGI: PATH_CONTEXT replaces PATH_ABSOLUTE (omitted)
+  CR: Build: Target release replaced archive (omitted)
 
 5.3.0 20200831
   BF: HTTP(S) AccessLog: Correction in the file name of the log file (use http_host instead of remote_host)
